tests/baselines/reference/objectLitTargetTypeCallSite.errors.txt
objectLitTargetTypeCallSite.ts(5,10): error TS2322: Type 'boolean' is not assignable to type 'number'.


==== objectLitTargetTypeCallSite.ts (1 errors) ====
    function process( x: {a:number; b:string;}) {
    	return x.a;
    }
    
    process({a:true,b:"y"});
             ~
!!! error TS2322: Type 'boolean' is not assignable to type 'number'.
!!! related TS6500 objectLitTargetTypeCallSite.ts:1:23: The expected type comes from property 'a' which is declared here on type '{ a: number; b: string; }'